--- a/.githun/workflows/snyk_scan.yml
+++ b/.githun/workflows/snyk_scan.yml
@@ -9,3 +9,7 @@ jobs:
         uses: snyk/actions/python@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          with:
+          command: code test
+          
+        
